Add menu hamburguesa, + responsividad y maquetado de carrito

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
               </g>
             </g>
         </svg>
-        <ul class="links-container">
+        <ul class="links-container undeployed" id="links-container">
           <li class="header-link"><a href="#">STORE</a></li>
           <li class="header-link"><a href="#">Home</a></li>
           <li class="header-link"><a href="#">Products</a></li>
@@ -195,6 +195,12 @@
     <div class="cart" id="cart">
         <div class="cart-close" id="close-cart">
             <i class='bx bx-x bx-md'></i>
+        </div>
+        <div class="cart-info">
+          <h3 class="cart-title">My cart</h3>
+          <img src="/assets/images/empty-cart.png" alt="empty-cart" class="emptyCart-img">
+          <h4 class="cart-subtitle">Your cart is empty</h4>
+          <h5 class="cart-message">You can add items to your cart by clicking on the "+" button on the product page.</h5>
         </div>
     </div>
 </div>
